# sdkwork-im-sdk

./: .gitattributes  .gitignore  README.md
docs/: README.md  api-spec.md  architecture.md  compatibility-matrix.md  generation-pipeline.md  generator-standard.md  multilanguage-audit-report.md  multilanguage-capability-matrix.md  multilanguage-generator-standard.md  overview.md  package-standards.md  realtime-extension-boundary.md  verification-matrix.md  wukongim-adapter-standard.md
openapi/: README.md  craw-chat-app.flutter.sdkgen.yaml  craw-chat-app.openapi.yaml  craw-chat-app.sdkgen.yaml  openchat-im.openapi.yaml
sdkwork-im-sdk-android/: README.md
sdkwork-im-sdk-csharp/: ARCHITECTURE.md  COMPATIBILITY.md  README.md  REGENERATION.md
sdkwork-im-sdk-flutter/: ARCHITECTURE.md  COMPATIBILITY.md  EVENTS.md  README.md  REALTIME.md  REGENERATION.md
sdkwork-im-sdk-go/: ARCHITECTURE.md  COMPATIBILITY.md  README.md  REGENERATION.md
sdkwork-im-sdk-ios/: README.md
sdkwork-im-sdk-java/: ARCHITECTURE.md  COMPATIBILITY.md  README.md  (+1 more)
sdkwork-im-sdk-python/composed/: README.md  pyproject.toml
sdkwork-im-sdk-python/composed/src/sdkwork_im_sdk/: __init__.py
sdkwork-im-sdk-rust/composed/: Cargo.toml  README.md
sdkwork-im-sdk-rust/composed/src/: builders.rs  client.rs  context.rs  conversations_module.rs  device_module.rs  error.rs  inbox_module.rs  lib.rs  media_module.rs  messages_module.rs  presence_module.rs  realtime_module.rs  rtc_module.rs  session_module.rs  streams_module.rs  types.rs
sdkwork-im-sdk-rust/composed/tests/: im_sdk_client_test.rs
(+208 files in other folders)
