[package]
name = "im-sdk"
version = "0.1.0"
edition = "2021"
publish = false
description = "Manual-owned IM Rust composed SDK crate."
license = "MIT"

[lib]
name = "im_sdk"
path = "src/lib.rs"

[dependencies]
sdkwork-im-sdk-generated = { path = "../generated/server-openapi" }
serde_json = "1.0"

[workspace]

